[package]
name = "myyrakle-jwt"
version = "0.1.0" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "test crate" 
keywords = ["jwt", "jsonwebtoken", "json", "auth"] 
edition = "2018" 
license = "MIT" 
include = ["src/*", "Cargo.toml"] 
exclude = ["src/main.rs"] 
readme = "README.md" #crate 페이지의 소개문 파일
repository = "https://github.com/myyrakle/myyrakle-jwt" 
documentation = "https://github.com/myyrakle/myyrakle-jwt/blob/master/README.md" 
homepage = "https://github.com/myyrakle/myyrakle-jwt/blob/master/README.md" 

[dependencies]
epoch-timestamp = "1.0.0"
serde = "1"
jsonwebtoken = "7.2.0"